--- a/pkg/issuer/acme/dns/akamai/BUILD.bazel
+++ b/pkg/issuer/acme/dns/akamai/BUILD.bazel
@@ -2,16 +2,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "akamai.go",
-        "edgegridauth.go",
-    ],
+    srcs = ["akamai.go"],
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/akamai",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/issuer/acme/dns/util:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util:go_default_library",
+        "@com_github_akamai_AkamaiOPEN-edgegrid-golang//configdns-v2:go_default_library",
+        "@com_github_akamai_AkamaiOPEN-edgegrid-golang//edgegrid:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@com_github_pkg_errors//:go_default_library",
     ],
@@ -19,13 +17,11 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "akamai_test.go",
-        "edgegridauth_test.go",
-    ],
+    srcs = ["akamai_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/issuer/acme/dns/util:go_default_library",
+        "@com_github_akamai_AkamaiOPEN-edgegrid-golang//configdns-v2:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
