--- a/test/unit/coreclients/BUILD.bazel
+++ b/test/unit/coreclients/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_apimachinery//pkg/watch:go_default_library",
+        "@io_k8s_client_go//applyconfigurations/core/v1:go_default_library",
         "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
     ],
 )
