--- a/pkg/util/pki/BUILD.bazel
+++ b/pkg/util/pki/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/util/errors:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
     ],
 )
 
