--- a/pkg/internal/apis/certmanager/validation/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/validation/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "certificate_for_issuer.go",
         "certificaterequest.go",
         "clusterissuer.go",
+        "deprecation.go",
         "issuer.go",
         "register.go",
         "warnings.go",
@@ -18,6 +19,9 @@ go_library(
         "//pkg/apis/acme:go_default_library",
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/certmanager/v1alpha3:go_default_library",
+        "//pkg/apis/certmanager/v1beta1:go_default_library",
         "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
@@ -28,7 +32,9 @@ go_library(
         "@com_github_kr_pretty//:go_default_library",
         "@io_k8s_api//admission/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
     ],
 )
@@ -39,18 +45,26 @@ go_test(
         "certificate_for_issuer_test.go",
         "certificate_test.go",
         "certificaterequest_test.go",
+        "clusterissuer_test.go",
         "issuer_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/certmanager/v1alpha3:go_default_library",
+        "//pkg/apis/certmanager/v1beta1:go_default_library",
         "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
         "//pkg/internal/apis/certmanager:go_default_library",
+        "//pkg/internal/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/internal/apis/certmanager/v1alpha3:go_default_library",
+        "//pkg/internal/apis/certmanager/v1beta1:go_default_library",
         "//pkg/internal/apis/meta:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@io_k8s_api//admission/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
