Deprecate alpha and beta versions of acme.cert-manager.io APIs
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/pkg/internal/apis/acme/validation/BUILD.bazel
+++ b/pkg/internal/apis/acme/validation/BUILD.bazel
@@ -4,16 +4,23 @@ go_library(
     name = "go_default_library",
     srcs = [
         "challenge.go",
+        "deprecation.go",
         "order.go",
         "register.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/acme/validation",
     visibility = ["//pkg:__subpackages__"],
     deps = [
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1alpha3:go_default_library",
+        "//pkg/apis/acme/v1beta1:go_default_library",
         "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
         "@io_k8s_api//admission/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
     ],
 )
@@ -26,8 +33,14 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/apis/acme/v1:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1alpha3:go_default_library",
+        "//pkg/apis/acme/v1beta1:go_default_library",
         "//pkg/internal/api/validation:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
+        "@io_k8s_api//admission/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/util/validation/field:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
     ],
