--- a/devel/addon/samplewebhook/chart/templates/deployment.yaml
+++ b/devel/addon/samplewebhook/chart/templates/deployment.yaml
@@ -29,6 +29,7 @@ spec:
             - --tls-private-key-file=/tls/tls.key
           # These are explicitly set as they are not granted by default in OpenShift
           securityContext:
+            runAsNonRoot: true
             capabilities:
               add:
                 - NET_BIND_SERVICE
