Configure Kyverno to ignore resources in E2E test namespaces
Because I couldn't quite get the Vault server running as non-root

Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/devel/addon/kyverno/values.yaml
+++ b/devel/addon/kyverno/values.yaml
@@ -22,3 +22,7 @@ config:
   - "[*,bind,*]"
   - "[*,ingress-nginx,*]"
   - "[*,sample-external-issuer-system,*]"
+  # The Vault issuer E2E tests deploy Vault into each test namespace but it is
+  # difficult to get it running non-root.
+  # See https://github.com/jetstack/cert-manager/pull/4044
+  - "[*,e2e-tests-*,*]"
