--- a/devel/addon/kyverno/values.yaml
+++ b/devel/addon/kyverno/values.yaml
@@ -19,8 +19,14 @@ config:
   - "[ClusterReportChangeRequest,*,*]"
   # Ignore some cert-manager E2E test components that can't easily be configured
   # to meet the pod security policy.
+  #
+  # It's difficult to make Bind run non-root.
+  # See https://github.com/sameersbn/docker-bind/issues/111
   - "[*,bind,*]"
+  # It isn't possible to configure ingress-nginx for non-root operation.
+  # See https://github.com/helm/charts/issues/14605
   - "[*,ingress-nginx,*]"
+  # See https://github.com/cert-manager/sample-external-issuer/issues/18
   - "[*,sample-external-issuer-system,*]"
   # The Vault issuer E2E tests deploy Vault into each test namespace but it is
   # difficult to get it running non-root.
