fix(ssa): explicitly specify port protocol field
Actually it's a [k8s bug](https://github.com/kubernetes/kubernetes/commit/dab511224020f6f7a896560d7c48770187a683c1).

In order to allow server side apply in most running clusters currently, we have to explicitly specify port `protocol` field in yaml manifest.

Signed-off-by: longkai <im.longkai@gmail.com>

--- a/deploy/charts/cert-manager/templates/webhook-service.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-service.yaml
@@ -18,6 +18,7 @@ spec:
   ports:
   - name: https
     port: 443
+    protocol: TCP
     targetPort: {{ .Values.webhook.securePort }}
   selector:
     app.kubernetes.io/name: {{ include "webhook.name" . }}
