--- a/pkg/controller/certificatesigningrequests/util/BUILD.bazel
+++ b/pkg/controller/certificatesigningrequests/util/BUILD.bazel
@@ -8,7 +8,13 @@ go_library(
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificatesigningrequests/util",
     visibility = ["//visibility:public"],
-    deps = ["@io_k8s_api//certificates/v1:go_default_library"],
+    deps = [
+        "//pkg/logs:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_utils//clock:go_default_library",
+    ],
 )
 
 go_test(
