--- a/pkg/util/pki/BUILD.bazel
+++ b/pkg/util/pki/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "csr.go",
         "generate.go",
         "keyusage.go",
+        "kube.go",
         "parse.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util/pki",
@@ -13,7 +14,9 @@ go_library(
     deps = [
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/experimental/v1alpha1:go_default_library",
         "//pkg/util/errors:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
     ],
 )
 
