--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -26,7 +26,10 @@ go_library(
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/ingress-shim:go_default_library",
         "//pkg/controller/issuers:go_default_library",
+        "//pkg/feature:go_default_library",
+        "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
     ],
