--- a/pkg/util/pki/BUILD.bazel
+++ b/pkg/util/pki/BUILD.bazel
@@ -25,14 +25,17 @@ go_test(
     srcs = [
         "csr_test.go",
         "generate_test.go",
+        "kube_test.go",
         "parse_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/util:go_default_library",
+        "//test/unit/gen:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
     ],
 )
 
