--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -75,6 +75,10 @@ spec:
                     - privateKeySecretRef
                     - server
                   properties:
+                    caBundle:
+                      description: CABundle is a PEM encoded TLS certificate to use to verify connections to the ACME server. If specified, system roots will not be used and the issuing CA for the ACME server must be verifiable using the provided root. If not specified, the connection will be verified using the cert-manager system root certificates.
+                      type: string
+                      format: byte
                     disableAccountKeyGeneration:
                       description: Enables or disables generating a new ACME account key. If true, the Issuer resource will *not* request a new account but will expect the account key to be supplied via an existing secret. If false, the cert-manager system will generate a new ACME account key for the Issuer. Defaults to false.
                       type: boolean
@@ -1232,6 +1236,10 @@ spec:
                     - privateKeySecretRef
                     - server
                   properties:
+                    caBundle:
+                      description: CABundle is a PEM encoded TLS certificate to use to verify connections to the ACME server. If specified, system roots will not be used and the issuing CA for the ACME server must be verifiable using the provided root. If not specified, the connection will be verified using the cert-manager system root certificates.
+                      type: string
+                      format: byte
                     disableAccountKeyGeneration:
                       description: Enables or disables generating a new ACME account key. If true, the Issuer resource will *not* request a new account but will expect the account key to be supplied via an existing secret. If false, the cert-manager system will generate a new ACME account key for the Issuer. Defaults to false.
                       type: boolean
@@ -2391,6 +2399,10 @@ spec:
                     - privateKeySecretRef
                     - server
                   properties:
+                    caBundle:
+                      description: CABundle is a PEM encoded TLS certificate to use to verify connections to the ACME server. If specified, system roots will not be used and the issuing CA for the ACME server must be verifiable using the provided root. If not specified, the connection will be verified using the cert-manager system root certificates.
+                      type: string
+                      format: byte
                     disableAccountKeyGeneration:
                       description: Enables or disables generating a new ACME account key. If true, the Issuer resource will *not* request a new account but will expect the account key to be supplied via an existing secret. If false, the cert-manager system will generate a new ACME account key for the Issuer. Defaults to false.
                       type: boolean
@@ -3550,6 +3562,10 @@ spec:
                     - privateKeySecretRef
                     - server
                   properties:
+                    caBundle:
+                      description: CABundle is a PEM encoded TLS certificate to use to verify connections to the ACME server. If specified, system roots will not be used and the issuing CA for the ACME server must be verifiable using the provided root. If not specified, the connection will be verified using the cert-manager system root certificates.
+                      type: string
+                      format: byte
                     disableAccountKeyGeneration:
                       description: Enables or disables generating a new ACME account key. If true, the Issuer resource will *not* request a new account but will expect the account key to be supplied via an existing secret. If false, the cert-manager system will generate a new ACME account key for the Issuer. Defaults to false.
                       type: boolean
