--- a/pkg/controller/certificatesigningrequests/util/BUILD.bazel
+++ b/pkg/controller/certificatesigningrequests/util/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificatesigningrequests/util",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/logs:go_default_library",
         "@io_k8s_api//certificates/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
