Adds the CertificateSigningRequest selfsigned controller
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/certificatesigningrequests/selfsigned/BUILD.bazel
+++ b/pkg/controller/certificatesigningrequests/selfsigned/BUILD.bazel
@@ -2,52 +2,47 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "checks.go",
-        "controller.go",
-        "sync.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificatesigningrequests",
+    srcs = ["selfsigned.go"],
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificatesigningrequests/selfsigned",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/api/util:go_default_library",
-        "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/apis/experimental/v1alpha1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/certificatesigningrequests:go_default_library",
         "//pkg/controller/certificatesigningrequests/util:go_default_library",
-        "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
-        "@com_github_go_logr_logr//:go_default_library",
-        "@io_k8s_api//authorization/v1:go_default_library",
+        "//pkg/util/errors:go_default_library",
+        "//pkg/util/kube:go_default_library",
+        "//pkg/util/pki:go_default_library",
         "@io_k8s_api//certificates/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/labels:go_default_library",
-        "@io_k8s_client_go//kubernetes/typed/authorization/v1:go_default_library",
         "@io_k8s_client_go//kubernetes/typed/certificates/v1:go_default_library",
-        "@io_k8s_client_go//listers/certificates/v1:go_default_library",
-        "@io_k8s_client_go//tools/cache:go_default_library",
+        "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
-        "@io_k8s_client_go//util/workqueue:go_default_library",
-        "@io_k8s_utils//clock:go_default_library",
     ],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = ["controller_test.go"],
+    srcs = ["selfsigned_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/api/util:go_default_library",
+        "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/controller:go_default_library",
-        "//pkg/controller/certificatesigningrequests/fake:go_default_library",
+        "//pkg/controller/certificatesigningrequests:go_default_library",
         "//pkg/controller/certificatesigningrequests/util:go_default_library",
         "//pkg/controller/test:go_default_library",
+        "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
+        "//test/unit/listers:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
         "@io_k8s_api//authorization/v1:go_default_library",
         "@io_k8s_api//certificates/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
@@ -67,13 +62,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/controller/certificatesigningrequests/ca:all-srcs",
-        "//pkg/controller/certificatesigningrequests/fake:all-srcs",
-        "//pkg/controller/certificatesigningrequests/selfsigned:all-srcs",
-        "//pkg/controller/certificatesigningrequests/util:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
