--- a/test/e2e/suite/conformance/BUILD.bazel
+++ b/test/e2e/suite/conformance/BUILD.bazel
@@ -14,6 +14,8 @@ go_library(
         "//test/e2e/suite/conformance/certificates/vault:go_default_library",
         "//test/e2e/suite/conformance/certificates/venafi:go_default_library",
         "//test/e2e/suite/conformance/certificates/venaficloud:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/ca:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/selfsigned:go_default_library",
         "//test/e2e/suite/conformance/rbac:go_default_library",
     ],
 )
@@ -30,6 +32,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/e2e/suite/conformance/certificates:all-srcs",
+        "//test/e2e/suite/conformance/certificatesigningrequests:all-srcs",
         "//test/e2e/suite/conformance/rbac:all-srcs",
     ],
     tags = ["automanaged"],
