--- a/test/e2e/suite/conformance/certificatesigningrequests/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificatesigningrequests/BUILD.bazel
@@ -3,24 +3,23 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "certificate.go",
-        "certificaterequest.go",
-        "clusterissuer.go",
-        "fixtures.go",
-        "issuer.go",
+        "suite.go",
+        "tests.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/ca",
-    tags = ["manual"],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance/certificatesigningrequests",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/apis/experimental/v1alpha1:go_default_library",
+        "//pkg/feature:go_default_library",
         "//pkg/util:go_default_library",
         "//test/e2e/framework:go_default_library",
-        "//test/e2e/util:go_default_library",
+        "//test/e2e/framework/helper/featureset:go_default_library",
+        "//test/e2e/framework/helper/validation:go_default_library",
+        "//test/e2e/framework/helper/validation/certificatesigningrequests:go_default_library",
         "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@com_github_onsi_gomega//:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
@@ -35,7 +34,11 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//test/e2e/suite/conformance/certificatesigningrequests/ca:all-srcs",
+        "//test/e2e/suite/conformance/certificatesigningrequests/selfsigned:all-srcs",
+    ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
