--- a/test/e2e/suite/conformance/certificatesigningrequests/selfsigned/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificatesigningrequests/selfsigned/BUILD.bazel
@@ -2,25 +2,19 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "certificate.go",
-        "certificaterequest.go",
-        "clusterissuer.go",
-        "fixtures.go",
-        "issuer.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/issuers/ca",
-    tags = ["manual"],
+    srcs = ["selfsigned.go"],
+    importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance/certificatesigningrequests/selfsigned",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/util:go_default_library",
+        "//pkg/apis/experimental/v1alpha1:go_default_library",
+        "//pkg/controller/certificatesigningrequests/util:go_default_library",
+        "//pkg/util/pki:go_default_library",
         "//test/e2e/framework:go_default_library",
-        "//test/e2e/util:go_default_library",
-        "//test/unit/gen:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@com_github_onsi_gomega//:go_default_library",
+        "@io_k8s_api//certificates/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
