--- a/test/e2e/suite/conformance/BUILD.bazel
+++ b/test/e2e/suite/conformance/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//test/e2e/suite/conformance/certificates/venaficloud:go_default_library",
         "//test/e2e/suite/conformance/certificatesigningrequests/ca:go_default_library",
         "//test/e2e/suite/conformance/certificatesigningrequests/selfsigned:go_default_library",
+        "//test/e2e/suite/conformance/certificatesigningrequests/vault:go_default_library",
         "//test/e2e/suite/conformance/rbac:go_default_library",
     ],
 )
