Wires up Venafi CertificateSigningRequest controller
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/cmd/controller/app/options/BUILD.bazel
+++ b/cmd/controller/app/options/BUILD.bazel
@@ -27,6 +27,7 @@ go_library(
         "//pkg/controller/certificatesigningrequests/ca:go_default_library",
         "//pkg/controller/certificatesigningrequests/selfsigned:go_default_library",
         "//pkg/controller/certificatesigningrequests/vault:go_default_library",
+        "//pkg/controller/certificatesigningrequests/venafi:go_default_library",
         "//pkg/controller/clusterissuers:go_default_library",
         "//pkg/controller/issuers:go_default_library",
         "//pkg/feature:go_default_library",
