Refactor ingress-shim into certificate-shim
This commit lays the groundwork for supporting multiple shims - Ingress specific code has been replace with more generic runtime.Object or metav1.Object code.

Signed-off-by: Jake Sanders <i@am.so-aweso.me>

--- a/pkg/controller/certificate-shim/BUILD.bazel
+++ b/pkg/controller/certificate-shim/BUILD.bazel
@@ -6,9 +6,10 @@ go_library(
         "checks.go",
         "controller.go",
         "helper.go",
+        "lister.go",
         "sync.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/ingress-shim",
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificate-shim",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/api/util:go_default_library",
@@ -26,6 +27,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
