--- a/cmd/controller/app/BUILD.bazel
+++ b/cmd/controller/app/BUILD.bazel
@@ -45,6 +45,7 @@ go_library(
         "@io_k8s_client_go//tools/leaderelection:go_default_library",
         "@io_k8s_client_go//tools/leaderelection/resourcelock:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned/scheme:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
     ],
 )
