--- a/pkg/controller/certificate-shim/BUILD.bazel
+++ b/pkg/controller/certificate-shim/BUILD.bazel
@@ -30,11 +30,16 @@ go_library(
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
+        "@io_k8s_client_go//discovery:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/networking/v1beta1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
+        "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/informers/externalversions:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/listers/apis/v1alpha1:go_default_library",
     ],
 )
 
