--- a/cmd/ctl/pkg/experimental/BUILD.bazel
+++ b/cmd/ctl/pkg/experimental/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//cmd/ctl/pkg/create:go_default_library",
         "//cmd/ctl/pkg/create/certificatesigningrequest:go_default_library",
+        "//cmd/ctl/pkg/install:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
