Adds an upgrade test
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/hack/bin/BUILD.bazel
+++ b/hack/bin/BUILD.bazel
@@ -147,8 +147,8 @@ genrule(
 genrule(
     name = "fetch_ytt",
     srcs = select({
-        ":darwin": ["@ytt_darwin"],
-        ":k8": ["@ytt_linux"],
+        ":darwin": ["@ytt_darwin//file"],
+        ":k8": ["@ytt_linux//file"],
     }),
     outs = ["ytt"],
     cmd = "cp $(SRCS) $@",
