--- a/pkg/controller/certificate-shim/ingresses/BUILD.bazel
+++ b/pkg/controller/certificate-shim/ingresses/BUILD.bazel
@@ -2,61 +2,37 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "controller.go",
-        "helper.go",
-        "sync.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/ingress-shim",
+    srcs = ["controller.go"],
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificate-shim/ingresses",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/api/util:go_default_library",
-        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/client/clientset/versioned:go_default_library",
-        "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/controller/certificate-shim:go_default_library",
         "//pkg/logs:go_default_library",
-        "@com_github_go_logr_logr//:go_default_library",
-        "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_api//networking/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/labels:go_default_library",
-        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
-        "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/networking/v1beta1:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
-        "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
     ],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "controller_test.go",
-        "helper_test.go",
-        "sync_test.go",
-    ],
+    srcs = ["controller_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//test/unit/gen:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@io_k8s_api//networking/v1beta1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
-        "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
-        "@io_k8s_client_go//testing:go_default_library",
     ],
 )
 
