addons: add gateway-api to the addons
Signed-off-by: Maël Valais <mael@vls.dev>

--- a/devel/BUILD.bazel
+++ b/devel/BUILD.bazel
@@ -11,6 +11,7 @@ filegroup(
         ":package-srcs",
         "//devel/addon/bind:all-srcs",
         "//devel/addon/certmanager:all-srcs",
+        "//devel/addon/gatewayapi:all-srcs",
         "//devel/addon/ingressnginx:all-srcs",
         "//devel/addon/kyverno:all-srcs",
         "//devel/addon/pebble:all-srcs",
